---------------------------------------------------------------------------------------------------
Version: 4.1.31
Date: ????
  Features:
    - Added a new, plate made out of crushed stone and omnite that replaces the old omnicium plate
      targeting a faster early (burner-) game
  Changes:
    - Renamed omnicium to omnium
    - Lock omnium behind T1 technologies
    - Replaced omnium with the new omnicium in all early game recipes
    - Slightly adjusted other ingredients in those recipes if necessary
    - Lowered the omnite brick walking speed modifier from 150% to 140%
  Bugfixes:
    - Fixed that some SD omnite brick tile transitions pointed to the vanilla brick
---------------------------------------------------------------------------------------------------
Version: 4.1.30
Date: 2022.07.05
  Bugfixes:
    - Fixed that crude ore refinement required 10x as much mining fluid as intended
---------------------------------------------------------------------------------------------------
Version: 4.1.29
Date: 2022.06.10
  Bugfixes:
    - Fixed some (recently introduced) incompatibilites with portal versions of pyrawores
    - Fix load issues with most recent bobores when gem sorting is disabled
---------------------------------------------------------------------------------------------------
Version: 4.1.28
Date: 2022.05.31
  Bugfixes:
    - Fixed that canisters were not excluded on omnilation recipe unlock checks for technologies
---------------------------------------------------------------------------------------------------
Version: 4.1.27
Date: 2022.05.01
  Changes:
    - Baketorio support (Thanks, Jemsterr!)
    - Added a seperate recipe to recycle omnic watse into omnic water (unlocked by default)
    - Increased the required waste for recycling omnic water from 360 to 420
  Bugfixes:
    - Added proper error messages for compat function calls when an invalid ore tier is specified