@@ -16,6 +16,10 @@ omnitech-angels-omnium-steel-alloy-smelting=Omnichalybs smelting
 omnitech-angels-omnium-aluminium-alloy-smelting=Omnilumina smelting
 omnitech-angels-omnium-tungsten-alloy-smelting=Omnifram smelting
 omnitech-crude-refinement=Crude __1__ refinement
+omnitech-omnite-concrete=Omcrete
+
+[technology-description]
+omnitech-omnite-concrete=Highly advanced building material also used for flooring.
 
 [item-group-name]
 omnimatter=Omnimatter
@@ -51,6 +55,8 @@ burner-omniphlog=Burner Omniphlog
 steam-omniphlog=Steam Omniphlog
 block-omni=Omni Block __1__
 crude=Crude __1__
+omnite-concrete=Omcrete
+omnite-refined-concrete=Refined omcrete
 
 [item-description]
 omnite=meep
@@ -99,9 +105,13 @@ omniphlog=Omniphlog Mk__1__
 burner-omniphlog=Burner Omniphlog
 steam-omniphlog=Steam Omniphlog
 omnite-brick=Omnite Brick
+omnite-concrete=Omcrete
+omnite-refined-concrete=Refined omcrete
 
 [tile-name]
 omnite-brick=Omnite Path
+omnite-concrete=Omcrete
+omnite-refined-concrete=Refined omcrete
 
 [autoplace-control-names]
 infinite-omnite=Infinite omnite
